bugfix: bottom of text cropped on small phones

--- a/src/static/ui_widgets/formation/select_by_icon.sass
+++ b/src/static/ui_widgets/formation/select_by_icon.sass
@@ -36,4 +36,9 @@
     +phone
       +iconSize(50px)
 
+  // If the Button Icon has a label...
+  .btn-large.btn-tall.hasLabel
+    +phone
+      line-height: 45px
+
 
